refactor: batch up to java-core/project-loom-concurrency-revolution-in-java (49/53)